WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
197975
REGRESSION (
r245170
): gmail.com header flickers when hovering over the animating buttons
https://bugs.webkit.org/show_bug.cgi?id=197975
Summary
REGRESSION (r245170): gmail.com header flickers when hovering over the animat...
Simon Fraser (smfr)
Reported
2019-05-16 21:04:59 PDT
Steps To Reproduce: 1. Go to gmail.com and login 2. Hover on the emails Results: Headers disappear and reappear.
Attachments
Reduction
(1.59 KB, text/html)
2019-05-16 21:05 PDT
,
Simon Fraser (smfr)
no flags
Details
Patch
(8.14 KB, patch)
2019-05-16 21:52 PDT
,
Simon Fraser (smfr)
no flags
Details
Formatted Diff
Diff
Archive of layout-test-results from ews102 for mac-highsierra
(3.45 MB, application/zip)
2019-05-16 22:58 PDT
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews107 for mac-highsierra-wk2
(2.98 MB, application/zip)
2019-05-16 23:11 PDT
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews112 for mac-highsierra
(3.42 MB, application/zip)
2019-05-16 23:34 PDT
,
EWS Watchlist
no flags
Details
Archive of layout-test-results from ews213 for win-future
(13.64 MB, application/zip)
2019-05-16 23:39 PDT
,
EWS Watchlist
no flags
Details
Patch
(8.57 KB, patch)
2019-05-17 09:20 PDT
,
Simon Fraser (smfr)
koivisto
: review+
Details
Formatted Diff
Diff
Show Obsolete
(5)
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2019-05-16 21:05:10 PDT
<
rdar://problem/50865946
>
Simon Fraser (smfr)
Comment 2
2019-05-16 21:05:36 PDT
Created
attachment 370101
[details]
Reduction
Simon Fraser (smfr)
Comment 3
2019-05-16 21:06:45 PDT
I think this is about a negative z-index child that causes its enclosing stacking context to become composited late. If that layer was sharing, we make it non-sharing, but leave the overlap map in a bad state.
Simon Fraser (smfr)
Comment 4
2019-05-16 21:18:13 PDT
Yeah we double-push a container to the overlap map in that case.
Simon Fraser (smfr)
Comment 5
2019-05-16 21:52:29 PDT
Created
attachment 370102
[details]
Patch
EWS Watchlist
Comment 6
2019-05-16 22:58:55 PDT
Comment hidden (obsolete)
Comment on
attachment 370102
[details]
Patch
Attachment 370102
[details]
did not pass mac-ews (mac): Output:
https://webkit-queues.webkit.org/results/12212813
Number of test failures exceeded the failure limit.
EWS Watchlist
Comment 7
2019-05-16 22:58:57 PDT
Comment hidden (obsolete)
Created
attachment 370103
[details]
Archive of layout-test-results from ews102 for mac-highsierra The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews102 Port: mac-highsierra Platform: Mac OS X 10.13.6
EWS Watchlist
Comment 8
2019-05-16 23:11:48 PDT
Comment hidden (obsolete)
Comment on
attachment 370102
[details]
Patch
Attachment 370102
[details]
did not pass mac-wk2-ews (mac-wk2): Output:
https://webkit-queues.webkit.org/results/12212837
Number of test failures exceeded the failure limit.
EWS Watchlist
Comment 9
2019-05-16 23:11:50 PDT
Comment hidden (obsolete)
Created
attachment 370104
[details]
Archive of layout-test-results from ews107 for mac-highsierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews107 Port: mac-highsierra-wk2 Platform: Mac OS X 10.13.6
EWS Watchlist
Comment 10
2019-05-16 23:34:57 PDT
Comment hidden (obsolete)
Comment on
attachment 370102
[details]
Patch
Attachment 370102
[details]
did not pass mac-debug-ews (mac): Output:
https://webkit-queues.webkit.org/results/12212853
Number of test failures exceeded the failure limit.
EWS Watchlist
Comment 11
2019-05-16 23:34:58 PDT
Comment hidden (obsolete)
Created
attachment 370105
[details]
Archive of layout-test-results from ews112 for mac-highsierra The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews112 Port: mac-highsierra Platform: Mac OS X 10.13.6
EWS Watchlist
Comment 12
2019-05-16 23:39:10 PDT
Comment hidden (obsolete)
Comment on
attachment 370102
[details]
Patch
Attachment 370102
[details]
did not pass win-ews (win): Output:
https://webkit-queues.webkit.org/results/12212889
New failing tests: fast/block/float/list-marker-is-float-crash.html imported/blink/compositing/video/video-controls-layer-creation-squashing.html fast/events/media-element-focus-tab.html
EWS Watchlist
Comment 13
2019-05-16 23:39:13 PDT
Comment hidden (obsolete)
Created
attachment 370106
[details]
Archive of layout-test-results from ews213 for win-future The attached test failures were seen while running run-webkit-tests on the win-ews. Bot: ews213 Port: win-future Platform: CYGWIN_NT-10.0-17763-3.0.5-338.x86_64-x86_64-64bit
Simon Fraser (smfr)
Comment 14
2019-05-17 09:20:48 PDT
Created
attachment 370122
[details]
Patch
Simon Fraser (smfr)
Comment 15
2019-05-17 11:39:57 PDT
https://trac.webkit.org/changeset/245471/webkit
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug