REGRESSION (r245170): gmail.com header flickers when hovering over the animating buttons https://bugs.webkit.org/show_bug.cgi?id=197975 <rdar://problem/50865946>

Reviewed by Antti Koivisto.

Source/WebCore:

When computeCompositingRequirements() determined that a layer could paint into shared backing, it
pushed an overlap container. If that layer then converted to normal composting, we'd push a second
overlap container, which left the overlap map in a bad state for the rest of the compositing
traversal, causing layers to not get composited when necessary.

Test: compositing/shared-backing/overlap-after-shared-to-composited.html

* rendering/RenderLayerCompositor.cpp:
(WebCore::RenderLayerCompositor::computeCompositingRequirements):

LayoutTests:

* compositing/shared-backing/overlap-after-shared-to-composited-expected.html: Added.
* compositing/shared-backing/overlap-after-shared-to-composited.html: Added.

Canonical link: https://commits.webkit.org/212095@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@245471 268f45cc-cd09-0410-ab3c-d52691b4dbfc